--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "sein-hnin",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "SET PORT=9000 && next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "SET PORT=9000 && next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "iron-session": "^6.0.5",
     "next": "12.0.9",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swr": "^1.2.0"
   },
   "devDependencies": {
     "eslint": "8.8.0",
